--- a/backend/Procfile
+++ b/backend/Procfile
@@ -1,1 +1,1 @@
-web: gunicorn -k uvicorn.workers.UvicornWorker -w 4 -b 0.0.0.0:8000 app.main:ap
+web: gunicorn -k uvicorn.workers.UvicornWorker -w 4 -b 0.0.0.0:8000 application:application
