--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -34,3 +34,11 @@ boto3>=1.34.0
 pytest>=8.0.0
 pytest-asyncio>=0.23.0
 httpx>=0.26.0
+
+# AI/LLM (Resume Parsing)
+google-genai>=1.0.0
+Pillow>=10.0.0
+PyMuPDF>=1.24.0
+
+# Vector Search
+pinecone>=5.0.0
