Fix resume upload blocking + profile null checks + data annotation display

--- a/backend/.platform/nginx/conf.d/proxy.conf
+++ b/backend/.platform/nginx/conf.d/proxy.conf
@@ -1,3 +1,6 @@
+# Allow large file uploads (resumes, Excel files)
+client_max_body_size 50m;
+
 # Increase timeout for large requests
 proxy_read_timeout 300;
 proxy_connect_timeout 300;
