--- a/backend/Procfile
+++ b/backend/Procfile
@@ -1,1 +1,1 @@
-web: gunicorn -k uvicorn.workers.UvicornWorker -w 4 --threads 4 -b 0.0.0.0:8000 --timeout 120 application:application
+web: gunicorn -k uvicorn.workers.UvicornWorker -w 4 --threads 2 -b 0.0.0.0:8000 --timeout 300 --graceful-timeout 60 --keep-alive 5 application:application
